K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: commands-depl
spec:
    replicas: 1
    selector:
        matchLabels: 
            app: commandsservice
    template:
        metadata:
            labels:
                app: commandsservice
        spec: 
            containers:
                - name: commandsservice
                  image: sergeydragun5/commandsservice
---
apiVersion: v1
kind: Service
metadata:
    name: commandsservice-clusterip-srv
spec:
    type: ClusterIP
    selector: 
        app: commandsservice
    ports: 
        - name: commandsservice
          protocol: TCP
          port: 8080
          targetPort: 8080
