K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: platformnpservice-srv
spec: 
    type: NodePort
    selector: 
        app: platformservice
    ports: 
        - name: platformservice
          protocol: TCP
          port: 8080
          targetPort: 8080
