K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations: 
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kunernetes.io/use-reges: 'true'
spec: 
    rules:
        - host: acme.com
          http: 
            paths: 
                - path: /api/platforms
                  pathType: Prefix
                  backend:
                    service:
                        name: platforms-clusterip-srv
                        port: 
                            number: 8080
                - path: /api/c/platforms
                  pathType: Prefix
                  backend:
                    service:
                        name: commandsservice-clusterip-srv
                        port: 
                            number: 8080
